--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="right-bar">
         <div class="page-content">
             <div class="header">Today Tasks</div>
-            <div class="content-categories">
+            <!-- <div class="content-categories">
               <div class="label-wrapper">
                 <input class="nav-item" name="nav" type="radio" id="opt-1">
                 <label class="category" for="opt-1">All</label>
@@ -39,45 +39,45 @@
                 <input class="nav-item" name="nav" type="radio" id="opt-4">
                 <label class="category" for="opt-4">Links</label>
               </div>
-            </div>
+            </div> -->
             <div class="tasks-wrapper">
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-1" checked>
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-1">
                   <span class="label-text">Dashboard Design Implementation</span>
                 </label>
                 <span class="tag approved">Approved</span>
               </div>
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-2" checked>
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-2">
                   <span class="label-text">Create a userflow</span>
                 </label>
                 <span class="tag progress">In Progress</span>
               </div>
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-3">
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-3">
                   <span class="label-text">Application Implementation</span>
                 </label>
                 <span class="tag review">In Review</span>
               </div>
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-4">
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-4">
                   <span class="label-text">Create a Dashboard Design</span>
                 </label>
                 <span class="tag progress">In Progress</span>
               </div>
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-5">
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-5">
                   <span class="label-text">Create a Web Application Design</span>
                 </label>
                 <span class="tag approved">Approved</span>
               </div>
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-6">
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-6">
                   <span class="label-text">Interactive Design</span>
                 </label>
@@ -85,14 +85,14 @@
               </div>
               <div class="header upcoming">Upcoming Tasks</div>
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-7">
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-7">
                   <span class="label-text">Dashboard Design Implementation</span>
                 </label>
                 <span class="tag waiting">Waiting</span>
               </div>
               <div class="task">
-                <input class="task-item" name="task" type="checkbox" id="item-8">
+                <input class="nav-item" name="nav" type="radio" id="opt-2" checked>
                 <label for="item-8">
                   <span class="label-text">Create a userflow</span>
                 </label>
